--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Checkout code
-        run: sudo apt update && sudo apt upgrade 
+        run: print("") #sudo apt update && sudo apt upgrade 
 
   deploy:
     needs: update
@@ -22,12 +22,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Start minikube
-        id: minikube
-        uses: medyagh/setup-minikube@latest
+      # - name: Start minikube
+      #   id: minikube
+      #   uses: medyagh/setup-minikube@latest
 
       - name: get to folder
-        run: cd ./3/yamls
+        run: cd ./3/yamls && print(pwd)
 
       - name: Verify working directory 
         run: print(pwd && ls -al")
