--- a/.github/workflows/workflo.yml
+++ b/.github/workflows/workflo.yml
@@ -13,7 +13,8 @@ jobs:
      #   uses: actions/checkout@v4
 
       - name: Checkout code
-        run: print("hi ") #sudo apt update && sudo apt upgrade 
+        run: echo $(pwd)
+ #sudo apt update && sudo apt upgrade 
 
       #- name: Checkout code
        # run: sudo apt update && sudo apt upgrade 
@@ -35,7 +36,8 @@ jobs:
 
 
       - name: Verify working directory 
-        run: print(pwd)
+        run: echo $(pwd)
+
 
       - name: apply yml
         run: kubectl apply -f Deployment.yaml -f Service.yaml -f Ingress.yaml
