--- a/.github/workflows/workflo.yml
+++ b/.github/workflows/workflo.yml
@@ -13,7 +13,7 @@ jobs:
      #   uses: actions/checkout@v4
 
       - name: Checkout code
-        run: echo $(pwd)
+        run: echo $(pwd) && ls
  #sudo apt update && sudo apt upgrade 
 
       #- name: Checkout code
@@ -27,12 +27,12 @@ jobs:
         uses: actions/checkout@v4
 
 
-      #- name: Start minikube
-       # id: minikube
-        #uses: medyagh/setup-minikube@latest
+      - name: Start minikube
+        id: minikube
+        uses: medyagh/setup-minikube@latest
 
       - name: get to folder
-        run: cd ~/3/yamls
+        run: echo $(pwd) && ls
 
 
       - name: Verify working directory 
