--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Wait for apply
         run: sleep 30
         
-      - name: Get service URL 
-        id: get-service-url 
-        run: echo "SERVICE_URL=$(minikube service rick-morty-api-service --url)" >> $GITHUB_ENV 
+      # - name: Get service URL 
+      #   id: get-service-url 
+      #   run: echo "SERVICE_URL=$(minikube service rick-morty-api-service --url)" >> $GITHUB_ENV 
 
   test: 
     needs: deploy 
@@ -45,5 +45,9 @@ jobs:
     steps: 
       - name: Checkout code 
         uses: actions/checkout@v4 
-      - name: Test service URL 
-        run: curl -f ${{ env.SERVICE_URL }} || exit 1
+      
+      - name: test
+        run: |
+          MINIKUBE_IP=$(minikube ip)
+          SERVICE_URL="http://${MINIKUBE_IP}:8080"  # Assuming your service runs on port 8080
+          curl -f $SERVICE_URL || exit 1
